--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,12 @@ services:
   - type: web
     name: telegram-image-gallery
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install -r requirements-simple.txt
     startCommand: python main.py
     envVars:
       - key: TELEGRAM_BOT_TOKEN
         sync: false
       - key: TELEGRAM_CHAT_ID
+        sync: false
+      - key: PORT
         sync: false
