--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,9 @@ services:
     env: python
     buildCommand: pip install -r requirements-simple.txt
     startCommand: python main.py
+    plan: free
     envVars:
       - key: TELEGRAM_BOT_TOKEN
         sync: false
       - key: TELEGRAM_CHAT_ID
-        sync: false
-      - key: PORT
         sync: false
